--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,31 +1,44 @@
 @charset "UTF-8";
-@keyframes cardenter {
+@-webkit-keyframes cardenter {
   0% {
-    transform: rotatey(0deg); }
+    transform: rotatey(0deg);
+    -webkit-transform: rotatey(0deg); }
   100% {
     transform-style: preserve-3d;
     transform: rotatey(180deg);
-    transition: .5s; } }
+    transition: .5s;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transform: rotatey(180deg);
+    -webkit-transition: .5s;
+    -moz-transform-style: preserve-3d;
+    -moz-transform: rotatey(180deg);
+    -moz-transition: .5s;
+    -ms-transform-style: preserve-3d;
+    -ms-transform: rotatey(180deg);
+    -ms-transition: .5s;
+    -o-transform-style: preserve-3d;
+    -o-transform: rotatey(180deg);
+    -o-transition: .5s; } }
 
-@keyframes react-logo-spin {
+@-webkit-keyframes react-logo-spin {
   from {
     transform: rotate(0deg); }
   to {
     transform: rotate(360deg); } }
 
 @media only screen and (max-width: 600px) {
-  /* line 69, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 83, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card {
     display: block; }
-  /* line 72, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 86, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .react-logo {
     display: none; } }
 
-/* line 77, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 91, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c); }
 
-/* line 81, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 95, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .react-logo {
   animation: react-logo-spin infinite 15s linear;
   height: 50px;
@@ -33,7 +46,7 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 89, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 103, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .touch {
   height: 37px;
   margin: auto;
@@ -41,41 +54,32 @@ body {
   position: relative;
   opacity: .8; }
 
-/* line 98, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 112, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-container {
+  perspective: 900px;
   display: flex;
   flex-wrap: wrap; }
-  /* line 103, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-  .card-container #show {
-    transform: rotatey(-180deg);
-    -webkit-transform: rotatey(-180deg);
-    -moz-transform: rotatey(-180deg);
-    -ms-transform: rotatey(-180deg);
-    -o-transform: rotatey(-180deg);
-    transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
-    -o-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -o-transition: 0.5s;
-    border: 1px solid rgba(0, 0, 0, 0.5); }
 
-/* line 112, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 118, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card {
-  position: relative;
+  margin-bottom: 10px;
   display: inline-block;
+  position: relative;
   float: left;
+  margin-right: 10px;
   width: 123px;
   height: 178px;
   border-radius: 10px;
   background: #fff;
   -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
-  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
-  margin-bottom: 15px; }
-  /* line 137, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
+  /* line 132, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  .card p {
+    text-align: center;
+    font: 80px/160px Georgia, Times New Roman, serif;
+    position: absolute;
+    z-index: 20000; }
+  /* line 140, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front, .card .back {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
@@ -86,7 +90,7 @@ body {
     display: flex;
     align-content: space-around;
     justify-content: center; }
-  /* line 145, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 148, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .front {
     transform: rotatey(-180deg);
     -webkit-transform: rotatey(-180deg);
@@ -96,24 +100,23 @@ body {
     z-index: 1;
     height: 100%;
     width: 100%; }
-  /* line 155, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 158, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .card .back {
     z-index: 3;
     width: 100%;
     height: 100%;
     background-image: url("../images/card-back.png");
     background-size: 100% 100%; }
-    /* line 162, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 165, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .card .back:hover {
       cursor: pointer; }
 
-/* line 168, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 171, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .flipit {
-  animation-name: cardenter;
-  animation-fill-mode: forwards;
-  animation-duration: .5s; }
+  animation: cardenter .5s forwards;
+  -webkit-animation: cardenter .5s forwards; }
 
-/* line 178, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 189, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .page-header {
   margin: 0;
   margin-bottom: 10px;
@@ -122,12 +125,12 @@ body {
   padding-top: 10px;
   height: 5em;
   box-shadow: 1px 1px 2px black; }
-  /* line 187, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 198, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .page-header h1 {
     margin: 0;
     padding: 0; }
 
-/* line 193, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 204, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #button-group {
   min-width: 130px;
   position: fixed;
@@ -136,12 +139,12 @@ body {
   left: auto;
   z-index: 30; }
 
-/* line 202, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 213, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .score-text {
   text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.4);
   color: #e60a0a; }
 
-/* line 207, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 218, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 #custom-button {
   border-radius: 3px;
   border: 1px solid transparent;
@@ -149,10 +152,10 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   width: 100px; }
-  /* line 214, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:disabled {
     opacity: .4; }
-  /* line 217, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 228, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   #custom-button:hover {
     transition: 0.4s;
     -webkit-transition: 0.4s;
@@ -161,7 +164,7 @@ body {
     border: 1px solid rgba(0, 0, 0, 0.5); }
 
 /* SIDE NAV */
-/* line 225, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 236, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .sidenav-button-a {
   background: rgba(0, 0, 255, 0.5);
   border-top-right-radius: 5px;
@@ -173,7 +176,7 @@ body {
   float: left;
   top: 48.5%; }
 
-@keyframes slideOut {
+@-webkit-keyframes slideOut {
   0% {
     height: 30px;
     width: 30px;
@@ -189,7 +192,7 @@ body {
     width: 25em;
     margin-top: -17em; } }
 
-@keyframes slideIn {
+@-webkit-keyframes slideIn {
   0% {
     height: 35em;
     width: 25em;
@@ -203,13 +206,13 @@ body {
     width: 0px;
     margin-top: inherit; } }
 
-@keyframes showItems {
+@-webkit-keyframes showItems {
   from {
     visibility: hidden; }
   to {
     visibility: visible; } }
 
-/* line 285, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 296, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .nav-wrapper {
   position: fixed;
   height: 30px;
@@ -218,7 +221,7 @@ body {
   transition: 2s ease-out;
   z-index: 500;
   text-align: center; }
-  /* line 294, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 305, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu {
     border: 1px solid rgba(0, 0, 0, 0.5);
     border-top-right-radius: 5px;
@@ -228,17 +231,17 @@ body {
     animation-name: slideOut;
     animation-duration: 1s;
     animation-fill-mode: forwards; }
-    /* line 300, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+    /* line 311, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
     .nav-wrapper .nav-menu .menu-items {
       animation-name: showItems;
       animation-delay: .9s;
       animation-duration: .1s;
       animation-fill-mode: forwards; }
-      /* line 306, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+      /* line 317, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
       .nav-wrapper .nav-menu .menu-items ol {
         list-style-position: inside;
         padding: 5px; }
-  /* line 313, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 324, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .nav-menu-closed {
     background: rgba(244, 167, 66, 0.8);
     animation-name: slideIn;
@@ -248,18 +251,18 @@ body {
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     box-shadow: 1px 2px 2px; }
-  /* line 321, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+  /* line 332, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
   .nav-wrapper .menu-items {
     visibility: hidden; }
 
 /* CARD IMAGES */
-/* line 328, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 339, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .card-wrapper {
   width: 213px;
   height: 268px;
   display: inline-block; }
 
-/* line 335, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 346, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -271,14 +274,14 @@ body {
   transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 347, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 358, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread {
   margin-top: 20px;
   width: 250px;
   height: 250px;
   position: relative; }
 
-/* line 354, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 365, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card {
   position: absolute;
   top: 0;
@@ -289,7 +292,7 @@ body {
   -ms-transition: top 0.3s ease, left 0.3s ease;
   transition: .5s ease; }
 
-/* line 367, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 378, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(1) {
   right: 100px;
   top: 10px;
@@ -300,7 +303,7 @@ body {
   transform: rotate(-30deg);
   transition: .5s; }
 
-/* line 381, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 392, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2) {
   left: 50px;
   -webkit-transform: rotate(10deg);
@@ -310,7 +313,7 @@ body {
   transform: rotate(10deg);
   transition: .5s; }
 
-/* line 392, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 403, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(2):last-child {
   left: 100px;
   -webkit-transform: rotate(30deg);
@@ -320,7 +323,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 402, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 413, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(3) {
   left: 200px;
   top: 10px;
@@ -331,7 +334,7 @@ body {
   transform: rotate(30deg);
   transition: .5s; }
 
-/* line 413, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 424, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(4) {
   left: 80px;
   top: 20px;
@@ -342,7 +345,7 @@ body {
   transform: rotate(50deg);
   transition: .5s; }
 
-/* line 424, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 435, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread :nth-child(5) {
   left: 100px;
   top: 30px;
@@ -353,60 +356,47 @@ body {
   transform: rotate(70deg);
   transition: .5s; }
 
-/* line 469, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 480, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .spread > .card .fanned {
   -webkit-box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4);
   box-shadow: 1px 1px 7px rgba(0, 0, 0, 0.4); }
 
-/* line 474, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 485, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 body {
   background: #00a651; }
 
-/* line 478, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-.card {
-  position: relative;
-  float: left;
-  margin-right: 10px;
-  width: 123px;
-  height: 178px;
-  border-radius: 10px;
-  background: #fff;
-  -webkit-box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3);
-  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.3); }
-  /* line 491, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
-  .card p {
-    text-align: center;
-    font: 80px/160px Georgia, Times New Roman, serif;
-    position: absolute; }
-
-/* line 499, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 509, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitdiamonds:before, .suitdiamonds:after {
   content: "♦";
-  color: #ff0000; }
+  color: #ff0000;
+  position: absolute; }
 
-/* line 504, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 515, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suithearts:before, .suithearts:after {
   content: "♥";
-  color: #ff0000; }
+  color: #ff0000;
+  position: absolute; }
 
-/* line 509, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 521, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitclubs:before, .suitclubs:after {
   content: "♣";
-  color: #000; }
+  color: #000;
+  position: absolute; }
 
-/* line 514, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 527, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 .suitspades:before, .suitspades:after {
   content: "♠";
-  color: #000; }
+  color: #000;
+  position: absolute; }
 
-/* line 519, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 533, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:before {
   position: absolute;
   font-size: 35px;
   left: 5px;
   top: 5px; }
 
-/* line 526, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
+/* line 540, /Users/danielhook/Desktop/card-game/card-game/src/css/main.scss */
 div[class*='suit']:after {
   position: absolute;
   font-size: 35px;
