--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -48,19 +48,33 @@ $main-color: rgb(230, 10, 10);
 $text-shadow: -1px 1px 1px rgba(0, 0, 0, .4);
 
 
-@keyframes cardenter {
+@-webkit-keyframes cardenter {
 	0% {
 		transform: rotatey(0deg);
+		-webkit-transform: rotatey(0deg);
 	}
 
 	100% {
 		transform-style: preserve-3d;
 		transform: rotatey(180deg);
 		transition: .5s;
+		-webkit-transform-style: preserve-3d;
+		-webkit-transform: rotatey(180deg);
+		-webkit-transition: .5s;
+		-moz-transform-style: preserve-3d;
+		-moz-transform: rotatey(180deg);
+		-moz-transition: .5s;
+		-ms-transform-style: preserve-3d;
+		-ms-transform: rotatey(180deg);
+		-ms-transition: .5s;
+		-o-transform-style: preserve-3d;
+		-o-transform: rotatey(180deg);
+		-o-transition: .5s;
+
 	}
 }
 
-@keyframes react-logo-spin {
+@-webkit-keyframes react-logo-spin {
 	from { transform: rotate(0deg); }
 	to { transform: rotate(360deg); }
 }
@@ -96,43 +110,32 @@ body {
 }
 
 .card-container {
-	// perspective: 300px;
-
+	perspective: 900px;
 	display: flex;
 	flex-wrap: wrap;
-	#show {
-		@include transform(rotatey(-180deg));
-		@include transform-style(preserve-3d);
-		@include transition(.5s);
-		// animation-duration: .5s;
-		border: 1px solid rgba(0, 0, 0, .5);
-	}
 }
 
 .card {
-	// -webkit-transition-duration: .5s; /* Safari */
-	// transition-duration: .5s;
-	// margin: 5px;
-	// width: 115px;
-	// min-width: 115px;
-	// height: 170px;
-	// border: 1px solid rgba(0, 0, 0, .0);
-	// border-radius: 5px;
-	// display: inline-block;
-	// box-shadow: 1px 1px 2px 2px rgba(0,0,0,.2);
-	// position: relative;
-	// text-align: center;
-
-	position: relative;
+	margin-bottom: 10px;
 	display: inline-block;
+	position: relative;
 	float: left;
+	margin-right: 10px;
 	width: 123px;
 	height: 178px;
 	border-radius: 10px;
 	background: #fff;
 	-webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
 	box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
-	margin-bottom: 15px;
+
+
+	p {
+		text-align: center;
+		font: 80px/160px Georgia, Times New Roman, serif;
+		position: absolute;
+		z-index: 20000;
+	}
+
 
 	.front, .back {
 		@include backface-visibility;
@@ -169,9 +172,17 @@ body {
 	// @include transform(rotatey(-180deg));
 	// @include transform-style(preserve-3d);
 	// @include transition(2s);
-	animation-name: cardenter;
-	animation-fill-mode: forwards;
-	animation-duration: .5s;
+	// animation-name: cardenter;
+	// animation-fill-mode: forwards;
+	// animation-duration: .5s;
+	animation: cardenter .5s forwards;
+	-webkit-animation: cardenter .5s forwards;
+	// -webkit-animation-name: cardenter;
+	// -webkit-animation-fill-mode: forwards;
+	// -webkit-transition-duration: .5s; /* Safari */
+	
+	
+
 	// border: 1px solid rgba(0, 0, 0, .5);
 }
 
@@ -234,7 +245,7 @@ body {
 	top: 48.5%;
 }
 
-@keyframes slideOut {
+@-webkit-keyframes slideOut {
 	0% {
 		height: 30px;
 		width: 30px;
@@ -257,7 +268,7 @@ body {
 	}
 }
 
-@keyframes slideIn {
+@-webkit-keyframes slideIn {
 	0% {
 		height: 35em;
 		width: 25em;
@@ -277,7 +288,7 @@ body {
 	}
 }
 
-@keyframes showItems {
+@-webkit-keyframes showItems {
 	from { visibility: hidden; }
 	to { visibility: visible; }
 }
@@ -475,45 +486,48 @@ body {
 	background: #00a651;
 }
 
-.card {
+// .card {
 
-	position: relative;
-	float: left;
-	margin-right: 10px;
-	width: 123px;
-	height: 178px;
-	border-radius: 10px;
-	background: #fff;
-	-webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
-	box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+// 	position: relative;
+// 	float: left;
+// 	margin-right: 10px;
+// 	width: 123px;
+// 	height: 178px;
+// 	border-radius: 10px;
+// 	background: #fff;
+// 	-webkit-box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
+// 	box-shadow: 3px 3px 7px rgba(0,0,0,0.3);
 
 
-	p {
-		text-align: center;
-		font: 80px/160px Georgia, Times New Roman, serif;
-		position: absolute;
-	}
+// 	p {
+// 		text-align: center;
+// 		font: 80px/160px Georgia, Times New Roman, serif;
+// 	}
 
-}
+// }
 
 .suitdiamonds:before, .suitdiamonds:after {
 	content: "♦";
 	color: #ff0000;
+	position: absolute;
 }
 
 .suithearts:before, .suithearts:after {
 	content: "♥";
 	color: #ff0000;
+	position: absolute;
 }
 
 .suitclubs:before, .suitclubs:after {
 	content: "♣";
 	color: #000;
+	position: absolute;
 }
 
 .suitspades:before, .suitspades:after {
 	content: "♠";
 	color: #000;
+	position: absolute;
 }
 
 div[class*='suit']:before {
